# smp-scheduler-simulation

./: CMakeLists.txt
include/: config.h  processor.h  scheduler.h  task.h  util.h
src/: main.c
src/config/: config.c
src/model/: processor.c  scheduler.c  task.c
src/model/sched/: fifo.c  strongest.c  weakest.c
